Update to OpenRouter and configure backend for Railway

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,12 @@
-# .env.example — copy this to .env and fill in your real values
-OPENAI_API_KEY=sk-...
+# OpenRouter Configuration
+OPENROUTER_API_KEY=sk-or-v1-...
+OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+
+# Supabase Configuration
 SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_KEY=your-anon-or-service-role-key
+SUPABASE_KEY=your-service-role-or-anon-key
+
+# App Configuration
 ALLOWED_ORIGINS=http://localhost:3000
+CHAT_MODEL=meta-llama/llama-3.1-8b-instruct
+EMBEDDING_MODEL=openai/text-embedding-3-small
